<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    tools:context="com.projects.ingilizceturkcesozluk.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:weightSum="12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="vertical">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adViewust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                ads:adSize="@string/reklamktipi"
                ads:adUnitId="@string/reklamkimliğiust" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical"
                    android:paddingRight="10dp">

                    <Button
                        android:id="@+id/btnsource"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btnline"
                        android:text="@string/ingilizce"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/btnchange"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:src="@drawable/degis" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">

                    <Button
                        android:id="@+id/btntarget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btnline"
                        android:text="@string/turkce"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/btnresult"
                    android:hint="@string/kelimegir"
                    android:paddingLeft="10dp"
                    android:textColor="@color/bg_login"
                    android:textColorHint="@color/bg_login" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical"
                    android:paddingRight="10dp">

                    <Button
                        android:id="@+id/btnbul"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btnbul"
                        android:text="@string/bul"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingRight="5dp">

                    <ImageView
                        android:id="@+id/btndinleust"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/btnline"
                        android:gravity="center"
                        android:src="@drawable/dinle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/btnkonus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/btnline"
                        android:gravity="center"
                        android:src="@drawable/mikrofon" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sonuc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btnresult"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:scrollbars="vertical"
                    android:text="@string/aramasonuc"
                    android:textColor="@color/bg_login"
                    android:textSize="20dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/btnkopyala"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:src="@drawable/kopyala" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/btnpaylas"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:src="@drawable/paylas" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/btndinle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:src="@drawable/dinle" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adViewalt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                ads:adSize="@string/reklamktipi"
                ads:adUnitId="@string/reklamkimliğialt" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
